# diffusion-avatars

./: README.md  environment.yml  index.html  pyproject.toml
notebooks/: inference.ipynb  visualize_data.ipynb
scripts/data/: create_renderings_dataset.py
scripts/evaluate/: evaluate.py
scripts/render/: render_old.py  render_trajectory.py
scripts/train/: train_diff_vp_2.py  train_diffusion_avatars.py
src/diffusion_avatars/: constants.py  env.py
src/diffusion_avatars/config/: diffusion_avatars.py  flame.py
src/diffusion_avatars/config/calibration/: calibration.py  calibration_params.py
src/diffusion_avatars/config/data/: bbox.py  rendering_data.py
src/diffusion_avatars/data_manager/: nersemble_data_manager.py  rendering_data_manager.py
src/diffusion_avatars/dataset/: rendering_dataset.py
src/diffusion_avatars/evaluation/: evaluation_manager.py  evaluation_result.py  paired_image_evaluator.py
src/diffusion_avatars/model/: conditional_sd_pipeline.py  diffusion_avatars.py  flame.py  inference_output.py
src/diffusion_avatars/model/expression/: expression_attention_transformer_2d.py  expression_attention_transformer_block.py
src/diffusion_avatars/model/temporal/: expression_attention.py  video_unet.py  (+6 more)
src/diffusion_avatars/model_manager/: diffusion_avatars_model_manager.py  finder.py
src/diffusion_avatars/render_manager/: diffusion_avatars_render_manager.py
src/diffusion_avatars/renderer/: nvdiffrast_renderer.py
src/diffusion_avatars/util/: log.py  mesh.py  quantization.py  render.py  types.py
static/css/: index.css
static/js/: index.js
(+3 files in other folders)
